Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.0
-
None
-
Ubuntu 12.10
-
a019c4c7a128f2bcf3f63f689119e7725f219daf
Description
Setting property 'preventStealing: true' causes error "Invalid property name 'preventStealing'. (M16)".
Attachments
For Gerrit Dashboard: QTCREATORBUG-9076 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
53353,2 | qmljs: update qt-creator builtins.qmltypes, and use them for qt<-4.8.5 | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |