qmljs: update qt-creator builtins.qmltypes, and use them for qt<-4.8.5

qmlplugindump of qt <= 4.8.5 does not output exportMetaObjectRevisions
so do not use its output for the builtins.

Task-number: QTCREATORBUG-9076
Change-Id: I82bdd325ef15f800c70c830ead4867787f6b7b0a
Reviewed-by: Kai Koehne <kai.koehne@digia.com>